--- a/ko/megalist_l_english.yml
+++ b/ko/megalist_l_english.yml
@@ -1,4 +1,6 @@
 ﻿l_english:
 
-megalist_title:0 "거대구조물 목록"
-MEGALIST_ENTRY:0 "[This.solar_system.Star.GetName]의 [This.GetName]"
+megalist_title: "거대구조물 목록"
+megalist_desc: ""
+MEGALIST_ENTRY: "[This.solar_system.Star.GetName]의 [This.GetName]"
+MEGALIST_ENTRY_DESC: " "
