Pontoon: Update Korean (ko) localization of Gigastructural-Engineering-More
Co-authored-by: 태준 <wjdxowns1123@gmail.com>

--- a/ko/giga_l_english.yml
+++ b/ko/giga_l_english.yml
@@ -100,7 +100,7 @@ name_succ_full: "초대기 가스 수집-축전기"
 allow_succ_full: "§H거대구조물 잠금해제:§! $name_succ_full$"
 name_matrioshka_brain: "마트료시카 브레인"
 allow_matrioshka_brain: "§H거대구조물 잠금해제:§! $name_matrioshka_brain$"
-name_succ: ""
+name_succ: "S.U.C.C."
 desc_matrioshka_brain: "문명의 정점을 보여주는, 가공할 규모의 슈퍼 컴퓨터입니다."
 name_virtual_reality: "가상 현실"
 allow_virtual_reality: "§H결정 잠금해제:§! 가상 현실"
