Pontoon: Update Korean (ko) localization of Gigastructural-Engineering-More
Co-authored-by: 태준 <wjdxowns1123@gmail.com>

--- a/ko/giga_l_english.yml
+++ b/ko/giga_l_english.yml
@@ -96,7 +96,7 @@ allow_penrose: "§H거대구조물 잠금해제:§! $name_penrose$"
 desc_penrose_sphere: "블랙홀 주위에 건설된 대형 반사체로, 블랙홀에서 에너지를 얻기 위해 초방사성 산란 현상을 이용합니다. 이것을 매우 강력한 폭탄으로 사용할 수도 있고, 에너지를 추출할 수도 있지만, 구체를 발전용으로 안정화하기 위해서는 추가적인 연구가 필요할 것입니다."
 allow_succ: "§H거대구조물 잠금해제:§! $name_succ$"
 desc_succ: "$name_succ_full$. 줄여서 $name_succ$는 가스 행성을 감싸고 있는 거대한 시설입니다. 거대한 견인 광선을 이용해 대기를 채취하여 에너지, 가스, 휘발성 분말로 재구성합니다."
-name_succ_full: "초대기 가스 수집-축전기"
+name_succ_full: "초대기 가스 수집-축전기(Superatmospheric Umbegaseous Collecto-Condenser)"
 allow_succ_full: "§H거대구조물 잠금해제:§! $name_succ_full$"
 name_matrioshka_brain: "마트료시카 브레인"
 allow_matrioshka_brain: "§H거대구조물 잠금해제:§! $name_matrioshka_brain$"
@@ -173,7 +173,7 @@ desc_systemcraft_p6: "스텔라 시스템크래프트의 다음 단계를 해제
 name_terraform_molten: "지열 안정기"
 allow_terraform_molten: "§H거대구조물 잠금해제:§! $name_terraform_molten$"
 desc_terraform_molten: "용암형 행성을 거주 가능한 행성으로 테라포밍 시켜주는 구조물입니다."
-name_terraform_shattered_full: "행성 결합 엔진"
+name_terraform_shattered_full: "행성 결합 엔진(Global Land Unification Engine)"
 allow_terraform_shattered: "§H거대구조물 잠금해제:§! $name_terraform_shattered$"
 allow_systemcraft_p5: "$allow_war_system$"
 desc_terraform_shattered: "$name_terraform_shattered_full$, 줄여서 $name_terraform_shattered$는 파괴된 행성의 잔해를 원래의 형태와 유사하게 재구성할 수 있습니다."
@@ -183,7 +183,7 @@ desc_terraform_barren: "황량한 행성을 거주 가능한 행성으로 테라
 name_terraform_gasgiant: "대기 안정기"
 allow_terraform_gasgiant: "§H거대구조물 잠금해제:§! $name_terraform_gasgiant$"
 desc_terraform_gasgiant: "$name_terraform_gasgiant$는 가스 행성의 상층 대기를 부분적으로 제어하여 어느정도 거주가 가능하게 만듭니다.\n\n가스 행성 식민지는 고유한 §Y발전 지구§!, §Y연구 지구§! 및 §Y희귀 가스 지구§!를 가지고 있습니다. 고유한 §Y행성 결정§!. 가스 행성이 클수록 식민지가 더 커집니다."
-name_terraform_shattered: ""
+name_terraform_shattered: "G.L.U.E."
 name_terraform_toxic: "대기 정화기"
 allow_terraform_toxic: "§H거대구조물 잠금해제:§! $name_terraform_toxic$"
 desc_terraform_toxic: "유독성 행성을 거주 가능한 행성으로 테라포밍 시켜주는 구조물입니다."
