Pontoon: Update Korean (ko) localization of Gigastructural-Engineering-More
Co-authored-by: 알못 <murdock9931@gmail.com>

--- a/ko/giga_l_english.yml
+++ b/ko/giga_l_english.yml
@@ -1853,11 +1853,11 @@ code6_digsite_desc: "§H[code_world_planet.GetName]§!의 프로젝트에 필요
 d_birch_start_desc: "이곳은 우리의 적은 인구가 감당하기에는 너무나도 높은 유지 비용을 요구하기에, 사람들은 일자리를 가릴 처지가 못 됩니다."
 d_birch_lost01: "고립된 집단 찾기"
 d_birch_lost01_desc: "표면이 너무 넓어 고립된 집단들이 존재합니다. 우리는 그들을 합류시킬 필요가 있습니다."
-ehof_reality_code.611.desc: ""
+ehof_reality_code.611.desc: "증폭기에 도달하기 위해 §H[code_world_planet.GetName]§!의 자기권에 특수시설을 증폭기 위치의 정확히 위에 지었습니다. 별 내부의 엄청난 열과 압력은 통상적인 발굴을 불가능하게 합니다.\n\n이 특수시설은 거대한 열 저항성 닻을 별의 대기권에 떨어뜨릴 것입니다. 닻은 증폭기의 위치에 가까워질 때까지 자기권을 통과한 뒤 자기장 생성기들을 통해 그 위치에 고정될 것입니다.\n\n시설과 닻 사이의 연결케이블은 이후 신호의 근원지에 도달할 때까지 내려가는 엘레베이터의 건설에 사용될 것입니다.\n\n닻을 내릴 준비가 되었습니다."
 d_alderson_generator: "수수께끼의 발전기"
 d_alderson_generator_desc: "이 고대의 기계는 일부 지구를 유지하는데 필요한 자원을 만들어냄으로써 우리의 소모를 보조하고 있습니다."
 d_alderson_ruined_district: "토지 정리"
-ehof_reality_code.612.desc: ""
+ehof_reality_code.612.desc: "닻은 근원지에 도달했습니다. 닻은 고정되었고 시설과의 연결이 안정화되었습니다.\n\n엘레베이터 장치의 사용이 가능합니다."
 d_alderson_ruined_district_desc: "앨더슨 조각을 정리하는 것은 엄청난 규모의 작업이지만, 어딘가에서부터는 시작해야 합니다."
 d_alderson_ruined_district_cleared: "최대 지구: §G+1§!"
 d_alderson_lost01_cleared: "§Y[root.GetName]§! 에서 §B2 £pops£Pops§! 을 획득하세요!\n모든 §Y$d_alderson_lost01$§! 블로커를 처리하면 §Y$d_alderson_ruined_district$§!의 비용을 §G50%§!까지 절감해 줍니다."
