Pontoon: Update Korean (ko) localization of Gigastructural-Engineering-More
Co-authored-by: 고양이 <kch9204@gmail.com>

--- a/ko/giga_l_english.yml
+++ b/ko/giga_l_english.yml
@@ -388,7 +388,7 @@ giga_chk_aeternum_1: "£menu_aet_1£§G에테르눔 (§MRegular§!)§!"
 giga_chk_aeternum_2: "£menu_aet_2£§G에테르눔 (§BAzure Aeternum§!)§!"
 giga_chk_aeternum_3: "£menu_aet_3£§G에테르눔 (§ROmega Aeternum§!)§!"
 giga_chk_galactic_core_disabled: "£menu_disabled£§R은하중심§!"
-header_habitables: ""
+header_habitables: "§E거주 가능 행성§!"
 giga_chk_galactic_core_shuffle: "£menu_s£§G은하중심 (무작위)§!"
 giga_chk_galactic_core_active: "£menu_a£§G은하중심 (초대질량 퀘이사)§!"
 giga_chk_galactic_core_inactive_aeternum: "£menu_i£§G은하중심 (에테르눔 초대질량 블랙홀)§!"
@@ -535,7 +535,7 @@ giga_vanilla_nexus_u: "£menu_u£§M과학 연결체§!"
 giga_menu.influence_upkeep: "[root.giga_chk_influence_upkeep]"
 giga_vanilla_nexus_disabled: "£menu_disabled£§R과학 연결체§!"
 giga_vanilla_array_1: "£menu_1£§H우주 감시망§!"
-giga_menu.2.desc: ""
+giga_menu.2.desc: "$giga_menu.2.name$\n\n§E게임 시작 옵션§!\n[root.giga_setting_fe_planetcrafts]\n[root.giga_setting_fed]\n[root.giga_setting_paluushia]\n[root.giga_setting_achievements]\n\n§E우주 중심 옵션§!\n[root.giga_setting_aeternum]\n[root.giga_setting_core]\n\n§E이벤트 호라이즌 분기점 조정 시설§!\n$giga_menu.ehof$\n[root.giga_setting_ehof_ai]\n\n§EThe Compound§!\n[root.giga_setting_compound]\n\n§E카첸 제국§!\n$giga_menu.katzen$\n\n§E거대구조물 옵션§!\n[root.giga_setting_build_cap]\n[root.giga_setting_scaling_dyson]\n[root.giga_setting_scaling_lifter]\n[root.giga_setting_scaling_brain]\n[root.giga_setting_influence]\n[root.giga_setting_habitats]"
 giga_vanilla_array_2: "£menu_2£§Y우주 감시망§!"
 giga_vanilla_array_3: "£menu_3£§G우주 감시망§!"
 giga_menu.4.desc: "$giga_menu.megabase$\n$giga_menu.matrioshka_brain$\n$giga_menu.gigaforge$\n$giga_menu.ndb$\n$giga_menu.nidavellir$\n$giga_menu.orbital_arcologies$\n$giga_menu.orbital_artificial_eco$\n$giga_menu.academy$\n$giga_menu.penrose_sphere$\n$giga_menu.planetary_computer$\n$giga_menu.psychic_beacon$\n$giga_menu.siphon$\n$giga_menu.quasistellar$\n$giga_menu.lifters$\n$giga_menu.accelerator$\n$giga_menu.systemcraft$\n$giga_menu.compressor$\n$giga_menu.succ$\n$giga_menu.virtual_reality$\n$giga_menu.the_vat$\n$giga_menu.orchid$"
@@ -2799,7 +2799,7 @@ lifeless_foggy: "안개 낀 행성"
 lifeless_foggy_desc: "이 행성의 대기는 매우 두껍습니다. 큰 폭풍이 자주 발생하며, 생명이 부족해 식량을 키우기는 어렵지만 생물권의 방해 없이 채굴 작업을 진행할 수 있습니다."
 lifeless_foggy_gases: "독성의 흔적"
 lifeless_foggy_gases_desc: "이 행성은 한때 유독성 행성이었으나 거주 가능한 행성으로 테라포밍 되었습니다. 그러나 독성이 있었던 대기의 흔적은 여전히 남아 있습니다."
-lifeless_temperate: "생명이 없는 행성"
+lifeless_temperate: "생명이 없는 거주 가능 행성"
 lifeless_temperate_desc: "거주 가능한 행성이지만 생명의 흔적은 보이지 않습니다. 따라서 식량을 재배하기는 어렵겠지만 자원을 걱정할 일은 없을 것입니다. 또한 순수한 행성 지질학을 연구할 수 있는 좋은 기회를 제공합니다."
 lifeless_torrid: "뜨거운 행성"
 lifeless_torrid_desc: "거주 가능한 행성이지만 굉장히 덥습니다. 지질학적 활동은 행성의 지각판을 변경하여 안정되었지만 잿가루와 화산의 부산물은 여전히 대기권에 상당히 존재합니다."
